# P2CLPFD

./: CLPFD-general.pl  INSTALL.md  README.md  ROADMAP.md  TECHNICAL.md  core.pl  facts.pl  json_api.pl  main.pl  pyproject.toml  sample.csv  scenarios.pl  simple_clpfd.pl  solver.pl  tests.pl  volume_based_pricing.pl
p2clpfd/: __init__.py  mcp.py  solver.py
p2clpfd/pl/: csv_loader.pl  facts.pl  json_api.pl  solver.pl
